fix slum name alignment issue

--- a/packages/css/src/components/datatable.scss
+++ b/packages/css/src/components/datatable.scss
@@ -15,7 +15,7 @@
     }
 
     .value {
-      width: 70%;
+      width: 50%;
       @apply text-heading-s;
     }
     .caption {
@@ -46,7 +46,7 @@
     }
 
     .value {
-      width: 70%;
+      width: 50%;
       @apply text-heading-s;
     }
 
